# MyneCraft

./: .gitignore  HOW_TO_BUILD  README.md  create  save.txt
Assets/: Cube-Cactus.material  Cube-Cactus.mesh  Cube-Cloud.material  Cube-Cloud.mesh  Cube-Diamond.material  Cube-Diamond.mesh  Cube-Dirt.material  Cube-Dirt.mesh  Cube-Glass.material  Cube-Glass.mesh  Cube-Grass.material  Cube-Grass.mesh  Cube-Ice.material  Cube-Ice.mesh  Cube-Leaves.material  Cube-Leaves.mesh  Cube-Plank.material  Cube-Plank.mesh  Cube-Rock.material  Cube-Rock.mesh  Cube-Sand.material  Cube-Sand.mesh  Cube-Snow.material  Cube-Snow.mesh  Cube-Stone.material  Cube-Stone.mesh  Cube-Torch.material  Cube-Torch.mesh  Cube-Water.material  Cube-Water.mesh  Cube-Wood.material  Cube-Wood.mesh  Mynecraft-Pickaxe.material  Mynecraft-Pickaxe.mesh  Mynecraft-Sword.material  Mynecraft-Sword.mesh  cubemat.material  custom.material  custom.particle  dameron.fontdef  (+4 more)
Linux-Build-Tools/: Makefile.am  buildit  configure.ac  makeit  plugins.cfg  resources.cfg
Source/Core/: Action.cpp  Action.h  Animation.cpp  Animation.h  Application.cpp  Application.h  Biome.cpp  Biome.h  BiomeManager.cpp  BiomeManager.h  BlockInfo.h  BulletContactCallback.cpp  BulletContactCallback.h  Chunk.cpp  Chunk.h  CollisionContext.cpp  CollisionContext.h  Cube.cpp  Cube.h  CubeManager.cpp  CubeManager.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GameState.h  HashCombine.h  MultiPlatformHelper.h  NetManager.cpp  NetManager.h  OISManager.cpp  OISManager.h  OgreMotionState.cpp  OgreMotionState.h  Perlin.cpp  Perlin.h  Player.cpp  Player.h  PlayerObject.cpp  PlayerObject.h  (+11 more)
